# singleschedule

./: Cargo.toml  README.md  TUI_LIMITATIONS.md  test_tui_fixes.md
.github/workflows/: ci.yml
src/: cli.rs  daemon.rs  lib.rs  main.rs  scheduler.rs  storage.rs
src/tui/: add_task_dialog.rs  app.rs  app_legacy.rs.bak  app_r3bl.rs  delete_confirm_dialog.rs  interactive_interface.rs  mod.rs  simple_interface.rs  state.rs  task_list_component.rs  tests.rs
src/tui/tests/: tui_component_tests.rs
tests/: integration_test.rs  scheduler_test.rs
