[package]
name = "singleschedule"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cron = "0.13"
tokio = { version = "1.43", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
anyhow = "1.0"
daemonize = "0.5"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
