[package]
name = "singleschedule"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cron = "0.13"
tokio = { version = "1.43", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
anyhow = "1.0"
daemonize = "0.5"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal"] }
r3bl_tui = "0.7.2"
r3bl_rs_utils_core = "0.9.16"
crossterm = "0.29.0"
atty = "0.2.14"

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
